--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
         </script>
 
         <!-- Pour utiliser EmailJS, ajoutez cette ligne et configurez le script ci-dessus -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script> -->
-        <!-- <script>emailjs.init("YOUR_PUBLIC_KEY");</script> -->
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+        <script>
+            emailjs.init("DEGwXf8DIMEGtEqGu");
+        </script>
     </body>
 </html>
