--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header class="hero">
+            <div class="hero-logo">@</div>
             <div class="container">
                 <h1>Optimisez et sécurisez vos licences logicielles</h1>
                 <p>
